<resources>
    <string name="app_name">Piloto Privado</string>
    <string name="piloto_privado">Piloto privado</string>
    <string name="materia">Materia</string>
    <string name="mensaje_fin_materia">Se ha llegado al final de las preguntas de esta materia</string>
    <string name="ok">Aceptar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="mostrar_resultados">Mostrar resultados</string>
    <string name="reiniciar_respuestas">Reiniciar respuestas</string>
    <string name="mensaje_reinicio">Al hacer click acá reiniciará las respuestas en todas las materias, ¿Desea hacerlo?</string>
    <string name="resultados">Resultados</string>
    <string name="mensaje_registro">

        ¡Gracias por usar esta aplicación!
        Tu colaboración voluntaria ayudará a mejorarla y a desarrollar otras herramientas con fines similares.
        \n

         <b>Pago móvil:</b> \n
        04126127152\n
        V14072162\n
        Banesco (0134)\n

           A efectos de seguimiento, luego de hacer efectiva tu colaboración pasa el código que se muestra
    a continuación y escribe el código que te enviaremos luego.

         <b>PayPal:</b>\n
         aldodell@gmail.com\n




</string>
    <string name="seleccionar_materia">Selecciona la materia:</string>
    <string name="registar_app">Registrar aplicativo</string>
    <string name="mensaje2" >Con la colaboración que aportes estarás ayudando a desarrollar más aplicaciones como ésta. Esperamos te sea muy útil. ¡Gracias por tu apoyo!
    </string>
    <string name="boton_pago">Apoyar con PayPal (o tarjeta)</string>
</resources>